--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework==3.7.3
 markdown==2.6.9
 django-filter==1.1.0
 django_extensions==1.9.7
+django_cron==0.5.0
 ipython==6.2.1
 bs4==0.0.1
 urllib3==1.22
